--- a/nitinshetty.net/index.html
+++ b/nitinshetty.net/index.html
@@ -29,6 +29,13 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+     <style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+  </style>
 
 </head>
 
@@ -198,19 +205,87 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2">
                     <p> I like doing fun stuff ! Running, Cycling, Trekking, Hiking, Cooking, Photography ,Watching Movies are some of the things I indulge myselves in during my free time</p>
 
-                    <p> Some glimpses of such fun times are coming up soon!</p>
-                </div>
-                <div class="col-lg-4">
+                    <p> Some glimpses of such fun times!</p>
+
+                   
+                <!-- <div class="col-lg-4">
                     <img src="img/portfolio/maitree.jpg" class="caption img-thumbnail"/>
-                </div>
+                </div> -->
                <!-- <div class="col-lg-8 col-lg-offset-2">
                     <a href="#" class="btn btn-lg btn-outline">
                          <img src="img/portfolio/karnala.jpg" class="caption img-thumbnail"/>
                     </a>
                 </div>  -->
+            </div>
+            <div class="col-sm-8 col-sm-offset-2">
+            	 <div id='image-carousel' class="carousel slide" data-ride='carousel'>
+                    <!-- Indicators -->
+                    	<ol class="carousel-indicators">
+                    		<li data-target='#image-carousel' data-slide-to="0" class="active"></li>
+                    		<li data-target='#image-carousel' data-slide-to="1"></li>
+                    		<li data-target='#image-carousel' data-slide-to="2"></li>
+                    		<li data-target='#image-carousel' data-slide-to="3"></li>
+                    		<li data-target='#image-carousel' data-slide-to="4"></li>
+                    	</ol>
+                    	<!-- Wrapper for Images -->
+                    	<div class="carousel-inner" role="listbox">
+                    		<div class="item active">
+                    			<img src="img/portfolio/asheri.jpg" alt="Asheri-Trek">
+                    			<div class="carousel-caption">
+                    			<h3>Asheri Trek</h3>
+                    			<p>This pic atop Asherigad - the fort on the highest peak in Thane,India is one of my favorite pics. The trek was excrutiating but the view was worth it!</p>
+                    			</div>
+                    		</div>
+
+                    		<div class="item">
+                    			<img src="img/portfolio/boston.jpg" alt="Boston-Skyline">
+                    			<div class="carousel-caption">
+                    			<h3>Boston Skyline</h3>
+                    			<p>I clicked this pic on one of my cycling trips in Boston. You get this view of the Boston skyline exactly in front of MIT. It was clicked just after sunset.</p>
+                    			</div>
+                    		</div>
+
+                    		<div class="item">
+                    			<img src="img/portfolio/downtown.jpg" alt="Boston-Downtown">
+                    			<div class="carousel-caption">
+                    			<h3>Liberty Mutual Building</h3>
+                    			<p>This building captured my attention when I was roaming in Boston a few days after I landed here. The image is a good example of symmetry.</p>
+                    			</div>
+                    		</div>
+
+                    		<div class="item">
+                    			<img src="img/portfolio/karnala.jpg" alt="karnala-trek">
+                    			<div class="carousel-caption">
+                    			<h3>Karnala Trek</h3>
+                    			<p>This is an edited version of a pic taken by a friend of mine of my first ever trek at Karnala Bird Santuary, India</p>
+                    			</div>
+                    		</div>
+
+                    		<div class="item">
+                    			<img src="img/portfolio/cycle.jpg" alt="Cycle">
+                    			<div class="carousel-caption">
+                    			<h3>Ride along Charles</h3>
+                    			<p>The best place to unwind and relax in Boston - floating deck on Charles at sunset</p>
+                    			</div>
+                    		</div>
+
+                    	</div>
+
+                    	<!-- Left and right controls -->
+						    <a class="left carousel-control" href="#image-carousel" role="button" data-slide="prev">
+						      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						      <span class="sr-only">Previous</span>
+						    </a>
+
+						    <a class="right carousel-control" href="#image-carousel" role="button" data-slide="next">
+						      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						      <span class="sr-only">Next</span>
+						    </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
